--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com;
     img-src 'self' data: https://checkout.razorpay.com;
     connect-src 'self' http://localhost:* https://api.razorpay.com https://lumberjack.razorpay.com https://endearing-selkie-06bf74.netlify.app;
-    frame-src 'self' https://api.razorpay.com https://identity.netlify.com;
+    frame-src 'self' https://api.razorpay.com https://identity.netlify.com https://endearing-selkie-06bf74.netlify.app;
   "
     />
     <title>Kanoonwise - Legal Services Platform</title>
