--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,10 @@
       content="
     default-src 'self';
     script-src 'self' https://checkout.razorpay.com https://checkout-static-next.razorpay.com https://identity.netlify.com https://unpkg.com;
-    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com;
-    font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com;
-    img-src 'self' data: https://checkout.razorpay.com;
-    connect-src 'self' http://localhost:* https://api.razorpay.com https://lumberjack.razorpay.com https://endearing-selkie-06bf74.netlify.app;
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://ka-f.fontawesome.com;
+    font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com https://ka-f.fontawesome.com data:;
+    img-src 'self' data: https: blob:;
+    connect-src 'self' http://localhost:* https://api.razorpay.com https://lumberjack.razorpay.com https://endearing-selkie-06bf74.netlify.app https://ka-f.fontawesome.com;
     frame-src 'self' https://api.razorpay.com https://identity.netlify.com https://endearing-selkie-06bf74.netlify.app;
   "
     />
