Refactor LegalInsights component to remove async/await in content loading and add Netlify configuration file for deployment settings

--- a/frontend/public/admin/index.html
+++ b/frontend/public/admin/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KanoonWise CMS</title>
-    <!-- Netlify CMS default stylesheet -->
-    <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.css" />
+    <!-- Decap CMS (formerly Netlify CMS) default stylesheet -->
+    <link rel="stylesheet" href="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.css" />
     <!-- Minimal local overrides to better match site admin styling -->
     <style>
       html,body{height:100%;margin:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial}
@@ -35,7 +35,7 @@
     <!-- Include the Netlify Identity Widget -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     
-    <!-- Include the script that builds the page and powers Netlify CMS -->
+    <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
     
     <!-- Initialize Netlify Identity Widget -->
